Update version to 0.1.0

--- a/util-map/pom.xml
+++ b/util-map/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>de.tu-dresden.inf.lat.util</groupId>
 		<artifactId>util-parent</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0</version>
 	</parent>
 
 	<build>
